--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,16 @@
 {
-  "name": "猪圈",
+  "name": "猪圏",
+  "short_name": "猪圏",
+  "description": "猪圏PWA",
+  "start_url": "/index.html",
+  "display": "standalone",
+  "background_color": "#000000",
+  "theme_color": "#000000",
   "icons": [
     {
-      "src": "icons/logo.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "/logo.png",
+      "sizes": "192x192",
+      "type": "image/x-icon"
     }
-  "start_url": "index.html"
   ]
 }
